--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,26 +13,14 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".InfoActivity"
+            android:exported="true" />
+        <activity
             android:name=".BookActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ContactsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.theme.InformationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CartActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BasketActivity"
-            android:exported="false" />
-        <activity
-            android:name=".BasketInformation"
-            android:exported="false" />
-        <activity
-            android:name=".InformationActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
